recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {	
	while(steps!=0){
		var x = increment
		var longueur = length + x
		avance(longeur)
		gauche(angle)
		
		spiral(5, 90, longueur, 5)
	}
	
}

